--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
         "url": "https://github.com/dpjanes/homestar-smartthings/issues"
     }, 
     "dependencies": {
-        "body-parser": "",
-        "iotdb": ">=0.5.1", 
+        "body-parser": "~1.12.0", 
+        "iotdb": ">=0.5.2", 
         "iotdb-mqtt": ">=0.0.4", 
         "iotdb-smartthings": ">=0.0.6"
     }, 
@@ -34,5 +34,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.0.2"
+    "version": "0.0.3"
 }
