--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     }, 
     "dependencies": {
         "body-parser": "~1.12.4", 
-        "iotdb-smartthings": ">=0.0.7"
+        "iotdb-smartthings": "~0.0.7"
     }, 
     "description": "HomeStar / IOTDB Bridge for SmartThings", 
     "devDependencies": {
@@ -25,8 +25,8 @@
     "main": "index.js", 
     "name": "homestar-smartthings", 
     "peerDependencies": {
-        "iotdb": ">=0.7.1", 
-        "iotdb-mqtt": ">=0.0.5"
+        "iotdb": "~0.7.6", 
+        "iotdb-mqtt": "~0.0.5"
     }, 
     "private": false, 
     "repository": {
@@ -36,5 +36,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.1.1"
+    "version": "0.1.2"
 }
