--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
         "url": "https://github.com/dpjanes/homestar-smartthings/issues"
     }, 
     "dependencies": {
-        "body-parser": "~1.15.0", 
-        "iotdb": ">=0.13.0", 
+        "body-parser": "~1.15.2", 
+        "iotdb": ">=3.0.0", 
         "iotdb-mqtt": "~0.0.6", 
-        "iotdb-smartthings": "~0.0.8"
+        "iotdb-smartthings": "~0.0.9"
     }, 
-    "description": "HomeStar / IOTDB Bridge for SmartThings", 
+    "description": "IOTDB Bridge for SmartThings", 
     "devDependencies": {
-        "grunt": "~0.4.5", 
-        "grunt-contrib-jshint": "~0.12.0", 
-        "grunt-contrib-nodeunit": "~0.4.1", 
-        "grunt-contrib-uglify": "~0.11.1", 
-        "grunt-contrib-watch": "~0.6.1", 
-        "grunt-jsbeautifier": "~0.2.10", 
-        "jshint-stylish": "~2.1.0", 
-        "load-grunt-tasks": "~3.4.0", 
-        "request": "~2.69.0"
+        "grunt": "~1.0.1", 
+        "grunt-contrib-jshint": "~1.0.0", 
+        "grunt-contrib-nodeunit": "~1.0.0", 
+        "grunt-contrib-uglify": "~2.0.0", 
+        "grunt-contrib-watch": "~1.0.0", 
+        "grunt-jsbeautifier": "~0.2.13", 
+        "jshint-stylish": "~2.2.1", 
+        "load-grunt-tasks": "~3.5.2", 
+        "request": "~2.74.0"
     }, 
     "homepage": "https://homestar.io", 
     "homestar": {}, 
@@ -34,5 +34,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.1.25"
+    "version": "0.1.26"
 }
